# my-feeds

./: .gitignore  README.md  config.py  config.toml  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: miniflux.opml
